# flask-microblog

./: .gitignore  README.md  config.py  pyproject.toml
migrations/versions/: 6aad5ed87ab3_users_table.py  8f68dd4f24e8_posts_table.py  a37a867cdbbe_new_fields_in_user_model.py
src/app/: __init__.py  app.py  forms.py  models.py  routes.py
src/app/templates/: base.html  index.html
