[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manuel Schuler", email = "60062851+Manuel3567@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
